--- a/index.html
+++ b/index.html
@@ -7,12 +7,55 @@
     <title>Prework Study Guide</title>
   </head>
   <body>
-    <header id="header">
+    <header id="top">
       <h1>Prework Study Guide</h1>
-      <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <img 
+        src="./assets/bowtie-cat.png" 
+        alt="Profile image of cat wearing a bow tie." 
+      />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>The head element contains information about the webpage.</li>
+          <li>The body element represents the visible content shown to the user.</li>
+          <li>Go ahead and add more notes, using as many list items as you want.</li>
+          <li>Remember to save the file often.</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>Enter your CSS notes here</li>
+        </ul>   
+      </section>
+   
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>git status: checks what branch we are currently on</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li>
+            <a href="https://digital.gov/resources/an-introduction-github/#additional-resources">
+              An Introduction to GitHub - Digital.gov
+            </a>
+          </li>
+          <li>
+            <a href="https://docs.github.com/en">
+              GitHub Docs - Help for wherever you are on your GitHub journey.
+            </a>
+          </li>
+        </ul> 
+      </section>
+   
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>Enter your JavaScript notes here</li>
+        </ul>   
+      </section>
     </main>
 
     <footer>
