added CSS to project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -23,13 +24,24 @@
           <li>Go ahead and add more notes, using as many list items as you want.</li>
           <li>Remember to save the file often.</li>
         </ul>
+        <br>
       </section>
    
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
-        </ul>   
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>External Links:
+            <ul>
+              <li><a href="https://en.wikipedia.org/wiki/Separation_of_concerns">Wiki: Separation of Concerns</a></li>
+              <li><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Building_blocks/The_box_model">MDN: The Box Model</a></li>
+              <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS">MDN: CSS - Cascading Style Sheets</a></li>
+              <li><a href="https://htmlcolorcodes.com/">HTML Color Codes</a></li>
+            </ul>
+          </li>
+        </ul> 
+        <br>
       </section>
    
       <section class="card" id="git-section">
@@ -48,6 +60,7 @@
             </a>
           </li>
         </ul> 
+        <br>
       </section>
    
       <section class="card" id="javascript-section">
@@ -55,6 +68,7 @@
         <ul>
           <li>Enter your JavaScript notes here</li>
         </ul>   
+        <br>
       </section>
     </main>
 
