--- a/index.html
+++ b/index.html
@@ -67,8 +67,18 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
-        </ul>   
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>External Links:
+            <ul>
+              <li><a href="https://developer.mozilla.org/en-US/docs/Glossary/Truthy">MDN: Truthy</a></li>
+              <li><a href="https://developer.mozilla.org/en-US/docs/Web/API/Console/log">MDN:console.log()</a></li>
+              <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures">MDN: JavaScript data types and data structures</a></li>
+              <li><a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/JavaScript_basics">MDN: JavaScript basics</a></li>
+              <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Math">MDN: Math</a></li>
+            </ul>
+          </li>
+        </ul>  
         <br>
       </section>
     </main>
